# TensorflowDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/tensorflow/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/org/tensorflow/demo/: CameraActivity.java  CameraConnectionFragment.java  ClassifierActivity.java  LegacyCameraConnectionFragment.java
app/src/test/java/org/tensorflow/demo/: ExampleUnitTest.java
